discussion/kv_engine/170541/170541_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-11 11:59:11.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 12:38:33.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15527/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15527/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15527/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43841/ : FAILURE

Failure of GoogleTest "TransportProtocols/LockTest.LockNonexistingDocument/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/LockTest.LockNonexistingDocument/McbpSsl
unknown file: error: SEH exception with code 0xc0000005 thrown in the test body.
[  FAILED  ] TransportProtocols/LockTest.LockNonexistingDocument/McbpSsl, where GetParam() = McbpSsl (0 ms)
TransportProtocols/LockTest.LockNonexistingDocument/McbpSsl
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43841/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17265/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17265/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17570/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14369/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36962/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5236/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16344/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5175/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18303/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25670/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
